--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,12 @@
 {
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "semi": false,
   "tabWidth": 2,
   "singleQuote": true,
-  "printWidth": 80,
+  "printWidth": 100,
+  "useTabs": false,
+  "proseWrap": "preserve",
+  "htmlWhitespaceSensitivity": "css",
   "endOfLine": "auto",
   "arrowParens": "always",
   "plugins": ["prettier-plugin-tailwindcss"]
