config: update VSCode editor settings
- Add word wrap configuration at 100 characters
- Format tailwindCSS.files.exclude array for better readability
- Enable markdown validation
- Fix missing newline at end of file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.wordWrapColumn": 100,
+
   "files.associations": {
     "*.css": "tailwindcss"
   },
@@ -8,12 +11,7 @@
   "tailwindCSS.includeLanguages": {
     "plaintext": "html"
   },
-  "tailwindCSS.files.exclude": [
-    "**/.git/**",
-    "**/node_modules/**",
-    "**/.hg/**",
-    "**/.svn/**"
-  ],
+  "tailwindCSS.files.exclude": ["**/.git/**", "**/node_modules/**", "**/.hg/**", "**/.svn/**"],
   "tailwindCSS.classAttributes": [
     "class",
     "className",
@@ -22,5 +20,6 @@
   ],
   "tailwindCSS.classFunctions": ["tw", "clsx", "tw\\.[a-z-]+"],
   "tailwindCSS.experimental.configFile": "app/globals.css",
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "markdown.validate.enabled": true
 }
