--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "scripts": {
     "clean": "rm -rf node_modules .next",
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.13",
+    "@mdx-js/loader": "^3.1",
+    "@mdx-js/react": "^3.1",
+    "@next/mdx": "^15.4.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.5.0",
     "antd": "^5.26.7",
     "clsx": "^2.1.1",
     "lucide-react": "^0.534.0",
     "motion": "^12",
-    "next": "15.4.1",
-    "next-themes": "^0.4.4",
+    "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-social-media-embed": "^2.5.18",
@@ -30,20 +31,20 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.1.0",
     "@types/node": "^24",
-    "@types/react": "^19.1",
-    "@types/react-dom": "^19.1",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.6",
     "eslint": "^9",
-    "eslint-config-next": "15.4.1",
+    "eslint-config-next": "15.4.6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-mdx": "^3.6.2",
-    "eslint-plugin-prettier": "^5.5.3",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5"
+    "eslint-plugin-prettier": "^5.5.4",
+    "postcss": "^8.5.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.8",
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
