--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.mdx", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.ts"],
-  "exclude": ["node_modules", "**/*-temp"]
+  "exclude": ["node_modules", "**/*-temp"],
+  "checkMdx": true
 }
