--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,8 @@
   },
   "include": ["next-env.d.ts", "**/*.mdx", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next.config.ts"],
   "exclude": ["node_modules", "**/*-temp"],
-  "checkMdx": true
+  "mdx": {
+    // Enable strict type checking in MDX files.
+    "checkMdx": true
+  }
 }
