--- a/package.json
+++ b/package.json
@@ -7,35 +7,44 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint && pnpm lint-mdx",
+    "lint-mdx": "eslint --ext .md,.mdx app/",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@mdx-js/loader": "^3.1",
     "@mdx-js/react": "^3.1",
     "@next/mdx": "^15.4.6",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.5.0",
-    "antd": "^5.26.7",
+    "antd": "^5.27.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.534.0",
-    "motion": "^12",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-social-media-embed": "^2.5.18",
     "sugar-high": "^0.9.3",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.0",
-    "@types/node": "^24",
-    "@types/react": "^19.1.6",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^9",
+    "eslint": "^9.33.0",
     "eslint-config-next": "15.4.6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-mdx": "^3.6.2",
@@ -44,7 +53,19 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.8",
-    "typescript": "^5.8.3"
+    "typescript": "5.8.3"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    }
+  },
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">=10"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
