feat(site): UI polish and content updates; add sitemap
- Polish theme tokens and globals; refine header/footer
- Standardize inputs/textarea styles
- Add app/sitemap.ts route
- Update app/data.ts and timeline entries
- Tweak homepage layout and theme switcher
- Ignore local .warp/ folder in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 # misc
 .DS_Store
 *.pem
-.vscode
+.vscode/
 
 # debug
 npm-debug.log*
@@ -39,6 +39,9 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# Warp
+.warp/
 
 # typescript
 *.tsbuildinfo
