--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/loader": "^3.1",
     "@mdx-js/react": "^3.1",
     "@next/mdx": "^15.4.6",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
