Enhance project structure and documentation
- Updated .gitignore to include additional local files and directories.
- Added AGENTS.md to define AI agent behavior and protocols.
- Improved README.md with updated requirements and setup instructions.
- Introduced new blog post example in MDX format.
- Enhanced blog layout with navigation links and improved styling.
- Created a 404 Not Found page for better user experience.
- Updated global styles and component styles for consistency.
- Refactored header and footer components for better layout.
- Updated TypeScript configuration for improved JSX handling.
- Added tasks.md for tracking personal website improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,17 @@ next-env.d.ts
 
 # Local working files
 **/*-temp
+.trae/.ignore
+.gitignore
+.gitignore
+.dropstone/mcp.json
+.dropstone/memory/dropstone_memory.db
+.dropstone/memory/workspaces/simonhlee_com_4b8f53c21f0ef979/sql_memory/dropstone_memory.db
+.dropstone/monitoring/metrics.json
+.gitignore
+.kiro/settings/mcp.json
+.kiro/specs/blog-discoverability/design.md
+.kiro/specs/blog-discoverability/requirements.md
+.kiro/specs/blog-discoverability/tasks.md
+.kiro/steering/AGENTS.md
+.kiro/steering/derived-cursor-rules.md
