--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && pnpm lint-mdx",
-    "lint-mdx": "eslint --ext .md,.mdx app/",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx && pnpm lint-mdx",
+    "lint-mdx": "eslint app/ --ext .md,.mdx",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write ."
   },
@@ -16,7 +16,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@mdx-js/loader": "^3.1",
     "@mdx-js/react": "^3.1",
-    "@next/mdx": "^15.4.6",
+    "@next/mdx": "^16.0.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "15.4.6",
+    "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -46,7 +46,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.33.0",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-mdx": "^3.6.2",
     "eslint-plugin-prettier": "^5.5.4",
@@ -65,8 +65,8 @@
     }
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=22",
     "pnpm": ">=10"
   },
-  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
+  "packageManager": "pnpm@10.16.1+sha512.0e155aa2629db8672b49e8475da6226aa4bdea85fdcdfdc15350874946d4f3c91faaf64cbdc4a5d1ab8002f473d5c3fcedcd197989cf0390f9badd3c04678706"
 }
